
    o	Preparations for name space support:

	- Functions in the base package are now defined in a name space.
	  As a temporary measure, you can disable this by defining the
	  environment variable R_NO_BASE_NAMESPACE.

	- UseMethod dispatching now searches for methods in the
	  environment of the caller of the generic function rather
	  than the environment where the generic is defined.

    o	New methods ([[, print, str) for "dendrogram" class.

    o   sprintf() now checks the agreement between formats and object
	types, and handles special values (NA, Inf, ...) correctly.

    o	chol() now uses a tolerance for non-positive-definiteness and
	so should give more consistent results across platforms.

    o	New function agrep() for approximate (fuzzy) string matching.

    o	help.search() can now use both approximate (fuzzy) and regular
	expression matching.  By default, if the pattern to be matched
	consists of only alphanumeric characters, whitespace or a dash,
	approximate matching is used.


DEPRECATED & DEFUNCT

    o	The assignment operator `_' is deprecated: a warning is
	given once per R session.

    o	arima0.diag() (package ts) is defunct.

    o	piechart() is defunct.


C-LEVEL FACILITIES

    o	Rversion.h is no longer automatically included by R.h.
	Include it explicitly if you need it.


INSTALLATION CHANGES

    o	R CMD INSTALL is now guaranteed to sort the R source files in
	ASCII order.


BUG FIXES

    o   read.dcf() had a memory leak.



	**************************************************
	*						 *
	*	       1.5 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.5.1


NEW FEATURES

    o   Enhancements to mathematical annotation of plots:

	- expressions involving dot(<something>) now produce a dot accent
	  above the <something> (initial patch from Ben Bolker).

	- within an expression, the symbol partialdiff is now converted
	  to a partial differential symbol (greek delta).
